--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,12 @@
-<div class="d-flex vh-100">
+<div class="d-flex vh-99">
   <div class="left-side me-2">
     <div class="flex-fill">
       <div class="d-flex flex-column min-vh-100 justify-content-center">
           <p class="linha1">{{'login.tittle1'| translate}}</p>
           <p class="linha2">{{'login.tittle2'| translate}}</p>
           <p class="linha3">{{'login.tittle3'| translate}}</p>
-      </div> 
+
+      </div>
     </div>
   </div>
 
@@ -111,6 +112,7 @@
       </form>
       </div>
   </div>
+    <p class="text-black mr-1">v{{frontVersion}}/{{backVersion}}</p>
 </div>
 
 
@@ -396,3 +398,4 @@
     </form>
     </div>
 </div> -->
+
